--- a/Chatapp/MVVM/View/MainWindow.xaml
+++ b/Chatapp/MVVM/View/MainWindow.xaml
@@ -6,25 +6,26 @@
         xmlns:local="clr-namespace:Chatapp"
         xmlns:viewmodel="clr-namespace:Client.MVVM.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="474" Width="816">
+        Title="Chat" Height="465" Width="810"
+        Background="DarkBlue">
     <Window.DataContext>
         <viewmodel:MainViewModel/>
     </Window.DataContext>
-    <Grid>
+    <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
         <DockPanel>
-            <TextBox Height="25"
+            <TextBox Height="25" Background="AliceBlue"
                        DockPanel.Dock="Top"
                        Text="{Binding Username,UpdateSourceTrigger=PropertyChanged}"/>
             <Button Height="25"
                     DockPanel.Dock="Top"
                     Content="Connect"
                     Command="{Binding ConnectToServerCommand}"/>
-            <ListView ItemsSource="{Binding Users}">
+            <ListView ItemsSource="{Binding Users}" Background="AliceBlue">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Username}"></TextBlock>
@@ -34,10 +35,9 @@
         </DockPanel>
 
         <StackPanel Grid.Column="1">
-            <ListView Height="380"
-                      ItemsSource="{Binding Messages}">
-            </ListView>
-            <StackPanel Orientation="Horizontal">
+            <ListView Height="380" Background="Ivory"
+                      ItemsSource="{Binding Messages}"/>
+            <StackPanel Orientation="Horizontal" Background="SeaShell">
                 <TextBox Height="55"
                            Width="545"
                            VerticalAlignment="Center"
